# spike-compiler

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  grammar.md  readme_pt.md  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  docs.yml  pages.yml  release.yml  tests.yml
assets/: README.md
assets/gifs/: README.md
assets/screenshots/: README.md
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  SpikePackaging.cmake
docs/: architecture.md  build-and-usage.md  changelog.md  contributing.md  grammar.md  index.md  lexer.md  mkdocs.yml  project-structure.md  roadmap.md  tutorial.md
docs/docs_en/: README.md
docs/docs_pt/: README.md  estrutura-do-projeto.md  index.md  lexer.md
docs/en/: architecture.md  changelog.md  cli.md  code-of-conduct.md  contributing.md  diagnostics.md  examples.md  faq.md  getting-started.md  grammar.md  installation.md  internals.md  ir.md  language-reference.md  lexer.md  optimization.md  roadmap.md  style-guide.md  styles.md  tutorial.md
docs/pt/: architecture.md  changelog.md  cli.md  code-of-conduct.md  contributing.md  diagnostics.md  examples.md  faq.md  getting-started.md  grammar.md  installation.md  internals.md  ir.md  language-reference.md  lexer.md  optimization.md  roadmap.md  style-guide.md  styles.md  tutorial.md
docs_pt/: README.md  architecture.md  arquitetura.md  build-e-uso.md  changelog.md  contributing.md  estrutura-do-projeto.md  grammar.md  lexer.md  roadmap.md  tutorial.md
examples/: ast-basic.por  comentarios_e_strings.por  controle_fluxo.por  exemplo.por  fibonacci.por  hello.por  if.por  if_test.por  logica.por  loop.por  read_test.por  while_test.por
examples/algorithms/: average.por  factorial.por  multiplication-table.por  prime-check.por
examples/basic/: arithmetic.por  input-output.por  variables.por
examples/control-flow/: if-else.por  if.por  nested-conditions.por  while.por
examples/invalid/: duplicate-variable.por  missing-end.por  type-mismatch.por  undeclared-variable.por
examples/showcase/: ast-demo.por  compiler-demo.por  interactive-demo.por
include/: ast.hpp  ast_graphviz.hpp  ast_json.hpp  codegen.hpp  ir.hpp  ir_builder.hpp  lexer.hpp  parser.hpp  pass_manager.hpp  program_stats.hpp  semantic.hpp  token.hpp  token_json.hpp  utils.hpp
include/cli/: options.hpp
include/core/: diagnostics.hpp  environment.hpp  phase_profiler.hpp  session.hpp  source_manager.hpp  version.hpp
include/spike/: ast.hpp  cli.hpp  colors.hpp  diagnostics.hpp  file_reader.h  file_reader.hpp  lexer.h  lexer.hpp  parser.hpp  portugol_style.h  token.h  token.hpp
scripts/: run_examples.sh
src/: ast.cpp  ast.hpp  cli.cpp  codegen.cpp  diagnostics.cpp  file_reader.cpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantic.cpp  token.cpp  token.hpp  token_type.hpp  utils.cpp
src/ast/: ast_graphviz.cpp  ast_json.cpp
src/backend/: process_runner.cpp
src/cli/: command_dispatcher.cpp  options.cpp  subcommands.cpp
src/core/: diagnostics.cpp  environment.cpp  phase_profiler.cpp  program_stats.cpp  session.cpp  version.cpp  (+1 more)
tests/: README.md  lexer_tests.cpp  main_test.cpp
website/: 404.html  docs.html  index.html  style.css  tutorial.html
(+84 files in other folders)
